--- a/GSTA.html
+++ b/GSTA.html
@@ -17,59 +17,90 @@
     <!-- <canvas id="myCanvas" style="float: left; width: 800px; height: 600px; border-width: 1px; z-index: 100;"></canvas> -->
     <div id="map"></div>
     <div style="position: absolute; padding: 10px; background-color: cornsilk;">
-        <div><button id="shili" style="width: 100%;">示例数据</button></div>
+        <div><button id="shili" style="width: 100%;">example</button></div>
         <br>
         <div>
             <input type="file" id="kmlFileInput" accept=".csv,.xlsx" onchange="geojsondata=readCSVFile(this)"
                 style="display: none" />
             <input style="width: 100%;" type="button" onclick="document.getElementById('kmlFileInput').click()"
-                value="选择CSV" />
-            <input style="width: 100%;" type="button" onclick="sta()" value="运行STA" />
+                value="Choose CSV" />
+
+            <h4>MODEL SETTING</h4>
+
+            <form action="" method="get">
+                <P>
+                    DC: <input style="width: 60px;" type="text" id="DC" value="0.08"><br>
+                    AA: <input style="width: 60px;" type="text" id="A" value="0.8">
+                </P>
+                type:<br>
+                <label><input id="FB-" type="checkbox" checked="checked" value="FB-" />FB- </label>
+                <label><input id="CB+" type="checkbox" checked="checked" value="CB+" />CB+ </label>
+                <br><br>smoth:<br>
+                <input type="radio" checked="checked" name="SMOTH" value="yes" />Yes<input type="radio" name="SMOTH"
+                    value="no" />No
+            </form>
+            <p>
+                <input style="width: 100%;" type="button" onclick="sta()" value="RUN STA" />
+            </p>
         </div>
-        <br>
+        <h4>VECTOR STYLE</h4>
         <div>
-            线型颜色 <input style="width: 62px;" type="color" name="" id="线色" value="#ffffff">
+            线色<input style="width: 67px;" type="color" name="" id="线色" value="#ffffff">
         </div>
         <div>
-            线型宽度 <input style="width: 60px;" type="text" name="" id="线宽" value="1">
+            线宽<input style="width: 60px;" type="text" name="" id="线宽" value="1">
         </div>
         <div>
-            箭头大小 <input style="width: 60px;" type="text" name="" id="箭头" value="1">
+            大小<input style="width: 60px;" type="text" name="" id="箭头" value="0.2">
         </div>
         <div>
-            缩放比例 <input style="width: 60px;" type="text" name="" id="比例" value="1">
+            比例<input style="width: 60px;" type="text" name="" id="比例" value="5">
         </div>
-        <div>
-            <br><button style="width: 100%;" onclick="clic()">开始绘制</button><br>
+        <h4>GSTA REPORT</h4>
+        <div id="report">
         </div>
-        <br>
 
     </div>
+
 
     <script src="GSTA/demoMap.js"></script>
     <script src="GSTA/leaflet-arrows.js"></script>
 
     <script>
         var geojsondata;
-        var scalelatlng;
+        //read csv data to geojsondata
+        function readCSVFile(obj) {
+            var reader = new FileReader();
+            reader.readAsText(obj.files[0], "GB2312");
+            reader.onload = function () {
+                csv2geojson.csv2geojson(this.result, function (err, data) {
+                    geojsondata = data;
+                });
+            }
+        }
+
         var scalelength;
         var no = 0;
-        var vectormap = L.layerGroup();
+        var vectormap = L.featureGroup();
 
         function sta() {
-            console.log(geojsondata);
+
             const N = geojsondata.features.length;
-            const DC = 0.08;
-            const A = 1;
-            var CBP, FBN, FPN, CPP
-            CBP = true; //CB+
-            FBN = true; //FB-
-            FPN = true; //FP-
-            CPP = true; //CP+
-            const SMOTH = true;
-            var X = [], Y = [], MD = [], SRT = [], SK = [], NUM = [], NUM2 = [];
+            const DC = $('#DC').val();
+            const A = $('#A').val();
+            const SMOTH = $("input[name='SMOTH']:checked").val() == 'yes';
+
+            var CBP, FBN, FPN, CPP;
+            CBP = $("input[id='CB+']:checked").val() == 'CB+';
+            FBN = $("input[id='FB-']:checked").val() == 'FB-';
+            // FPN = true;
+            // CPP = true;
+            // console.log(CBP, FBN, FPN, CPP)
+
+            var X = [], Y = [], MD = [], SRT = [], SK = [], NUM1 = [], NUM2 = [];
             var SNP = [], SEP = [], VL = [], BITA = [], SNPP = [], SEPP = [];
             var L = [];
+
             for (i = 0; i < N; i++) {
                 X[i] = Number(geojsondata.features[i].geometry.coordinates[0]);
                 Y[i] = Number(geojsondata.features[i].geometry.coordinates[1]);
@@ -81,51 +112,62 @@
                 SEP[i] = 0;
                 X[i] = A * X[i];
             }
-            console.log(X)
+
             for (i = 0; i < N; i++) {
-                nums = 0
-                nums2 = 0
-                for (j = i + 1; j < N; j++) {
+                var nums1 = 0
+                var nums2 = 0
+                for (j = 0; j < N; j++) {
                     DXY = Math.sqrt((X[i] - X[j]) * (X[i] - X[j]) + (Y[i] - Y[j]) * (Y[i] - Y[j]))
-                    if (DXY < DC) {
-                        nums = nums + 1
+                    if (DXY <= DC && DXY > 0) {
+                        nums1 = nums1 + 1;
+                        // 'FB-：更细 (Fine)、更好分选 (Better) 和更负 (-) 偏度
+                        if (FBN && MD[i] < MD[j] && SRT[i] > SRT[j] && SK[i] > SK[j]) {
+                            SNP[i] = SNP[i] + VECTOR(X[i], X[j], Y[i], Y[j], A).NP
+                            SEP[i] = SEP[i] + VECTOR(X[i], X[j], Y[i], Y[j], A).EP
+                            nums2 = nums2 + 1
+                        }
                         //'CB+：更粗 (Corse)、更好分选 (Better) 和更正 (+) 偏度
                         if (CBP && MD[i] > MD[j] && SRT[i] > SRT[j] && SK[i] < SK[j]) {
                             SNP[i] = SNP[i] + VECTOR(X[i], X[j], Y[i], Y[j], A).NP
                             SEP[i] = SEP[i] + VECTOR(X[i], X[j], Y[i], Y[j], A).EP
                             nums2 = nums2 + 1
                         }
-                        // 'FB -：更细 (Fine)、更好分选 (Better) 和更负 (-) 偏度
-                        if (FBN && MD[i] < MD[j] && SRT[i] > SRT[j] && SK[i] > SK[j]) {
-                            SNP[i] = SNP[i] + VECTOR(X[i], X[j], Y[i], Y[j], A).NP
-                            SEP[i] = SEP[i] + VECTOR(X[i], X[j], Y[i], Y[j], A).EP
-                            nums2 = nums2 + 1
-                        }
-                        //'FP -：更细 (Corse)、更差分选 (Poor) 和更负 (-) 偏度
-                        if (FPN && MD[i] < MD[j] && SRT[i] < SRT[j] && SK[i] > SK[j]) {
-                            SNP[j] = SNP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).NP
-                            SEP[j] = SEP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).EP
-                            nums2 = nums2 + 1
-                        }
-                        // 'CP+：更粗 (Corse)、更差分选 (Poor) 和更正 (+) 偏度
-                        if (CPP && MD[i] > MD[j] && SRT[i] < SRT[j] && SK[i] < SK[j]) {
-                            SNP[j] = SNP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).NP
-                            SEP[j] = SEP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).EP
-                            nums2 = nums2 + 1
-                        }
+                        // //'FP-：更细 (Corse)、更差分选 (Poor) 和更负 (-) 偏度
+                        // if (FPN && MD[i] < MD[j] && SRT[i] < SRT[j] && SK[i] > SK[j]) {
+                        //     SNP[j] = SNP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).NP
+                        //     SEP[j] = SEP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).EP
+                        //     nums2 = nums2 + 1
+                        // }
+                        // // 'CP+：更粗 (Corse)、更差分选 (Poor) 和更正 (+) 偏度
+                        // if (CPP && MD[i] > MD[j] && SRT[i] < SRT[j] && SK[i] < SK[j]) {
+                        //     SNP[j] = SNP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).NP
+                        //     SEP[j] = SEP[j] + VECTOR(X[j], X[i], Y[j], Y[i], A).EP
+                        //     nums2 = nums2 + 1
+                        // }
                     }
                 }
-                NUM[i] = nums
+                NUM1[i] = nums1
                 NUM2[i] = nums2
             }
-            console.log('NUM', NUM)
-            console.log('NUM2', NUM2)
-            console.log('SNP', SNP)
-            console.log('SEP', SEP)
+
+            // console.log('number of site in DC',
+            //     "MIN:", Math.min.apply(Math, NUM1),
+            //     "MAX:", Math.max.apply(Math, NUM1),
+            //     "AVE:", (eval(NUM1.join("+")) / NUM1.length).toFixed(1),
+            // )
+            document.getElementById("report").innerHTML =
+                'Number in DC' +
+                "<br>MIN: " + Math.min.apply(Math, NUM1) +
+                "<br>MAX: " + Math.max.apply(Math, NUM1) +
+                "<br>AVE: " + (eval(NUM1.join("+")) / NUM1.length).toFixed(1);
+            // console.log('NUM2', NUM2)
+            // console.log('SNP', SNP)
+            // console.log('SEP', SEP)
+
             //--------------------------------
             switch (SMOTH) {
                 case true:
-                    console.log('true')
+                    console.log('somth')
                     for (i = 0; i < N; i++) {
                         L[i] = 0
                         SNPP[i] = 0
@@ -133,8 +175,9 @@
                         for (j = 0; j < N; j++) {
                             DXY = Math.sqrt((X[i] - X[j]) * (X[i] - X[j]) + (Y[i] - Y[j]) * (Y[i] - Y[j]))
                             // '这里需要注意，没有把自身加上
-                            if (DXY == 0 || DXY > DC) {
-                            } else {
+                            // if (DXY == 0 || DXY > DC) {
+                            // if (DXY < DC && i != j) {
+                            if (DXY < DC) {
                                 SNPP[i] = SNPP[i] + SNP[j]
                                 SEPP[i] = SEPP[i] + SEP[j]
                                 L[i] = L[i] + 1
@@ -142,65 +185,77 @@
                         }
                     }
                     for (i = 0; i < N; i++) {
-                        SNPP[i] = SNPP[i] / (L[i] + 1)
-                        SEPP[i] = SEPP[i] / (L[i] + 1)
-                        VL[i] = Math.sqrt(SNPP[i] * SNPP[i] + SEPP[i] * SEPP[i])
+                        SNPP[i] = SNPP[i] / (L[i] + 1);
+                        SEPP[i] = SEPP[i] / (L[i] + 1);
+                        VL[i] = Math.sqrt(SNPP[i] * SNPP[i] + SEPP[i] * SEPP[i]);
+                        VL[i] = Number(VL[i].toFixed(3));
+
                         if (SEPP[i] == 0 && SNPP[i] == 0) {
                             BITA[i] = 0
                         }
                         else {
-                            BITA[i] = Math.atan2(SEPP[i], SNPP[i]) * 180 / 3.1416
+                            BITA[i] = Math.atan2(SEPP[i], SNPP[i]) * 180 / 3.1416;
+                            if (BITA[i] < 0) {
+                                BITA[i] = BITA[i] + 360
+                            }
+                        }
+                        BITA[i] = Number(BITA[i].toFixed(2));
+                    }
+                    break;
+
+                case false:  // '以下执行不平滑                    
+                    console.log('NOsomth')
+                    for (i = 0; i < N; i++) {
+
+                        VL[i] = Math.sqrt(SNP[i] * SNP[i] + SEP[i] * SEP[i])
+                        if (SEP[i] == 0 && SNP[i] == 0) {
+                            BITA[i] = 0
+                        }
+                        else {
+                            BITA[i] = Math.atan2(SEP[i], SNP[i]) * 180 / 3.1416
                             if (BITA[i] < 0) {
                                 BITA[i] = BITA[i] + 360
                             }
                         }
                     }
                     break;
-                case false:
-                    代码块
-                    break;
                 default:
-                    默认代码块
+                    console.log("unknown")
             }
-            console.log('SNPP', SNPP)
-            console.log('SEPP', SEPP)
-            console.log('BITA', BITA)
-            console.log('VL', VL)
 
+            var output = []
+            for (i = 0; i < N; i++) {
+                geojsondata.features[i].properties['长度'] = VL[i];
+                geojsondata.features[i].properties['方向'] = BITA[i];
+                output.push(VL[i] + ',' + BITA[i])
+            }
+            console.log('output', output);
+            clic()
         }
 
         function VECTOR(XX2, XX1, YY2, YY1, A) {
             var ALPHA
-            if (YY1 = YY2) {
+            if (YY1 == YY2) {
                 ALPHA = 0
             } else {
                 ALPHA = Math.atan2((XX1 - XX2) / A, (YY1 - YY2))
             }
-            var EP = Math.sin(ALPHA)
-            var NP = Math.cos(ALPHA)
+            var EP = Math.sin(ALPHA);
+            var NP = Math.cos(ALPHA);
             return {
-                EP: EP,
-                NP: NP
+                'EP': EP,
+                'NP': NP
             }
-
         }
 
-
-
-
-
-
-
-
         function clic() {
-            // console.log(JSON.stringify(geojsondata));            
+
             var xiankuan = $("#线宽").val();
             var xianse = $("#线色").val();
             var arrowsize = $("#箭头").val();
             var arrowscale = $("#比例").val();
 
             vectormap.clearLayers();
-
 
             for (i = 0; i < geojsondata.features.length; i++) {
                 var point0 = geojsondata.features[i];
@@ -214,9 +269,6 @@
                     distanceUnit: 'km',
                     isWindDegree: true,
                     stretchFactor: arrowscale,
-                    // popupContent: function (data) {
-                    //     return "<h3>" + data.title + "</h3>";
-                    // },
                     arrowheadLength: arrowsize,
                     color: xianse,
                     weight: xiankuan, // the width of the arrow
@@ -232,38 +284,21 @@
                 var arrow = new L.Arrow(arrowData, arrowOptions);
                 arrow.addTo(vectormap);
                 arrow.bindPopup('Length:' + changdu + ' | Direction:' + fangxiang)
-
             }
 
             vectormap.addTo(map);
-            // console.log(vectormap);
-            if (no == 0) {
-                map.setView(L.latLng(lat, lng), 10);
-                map.panTo(L.latLng(lat, lng));
-            } else {
-            }
+            map.fitBounds(vectormap.getBounds())
 
-            i = 1;
+            // if (no < 5) {
+            //     map.fitBounds(vectormap.getBounds());
+            // } else {
+            //     map.panTo(L.latLng(lat, lng));
+            // }
             no = no + 1
         }
 
-
-
-        function readCSVFile(obj) {
-            var reader = new FileReader();
-            reader.readAsText(obj.files[0], "GB2312");
-            reader.onload = function () {
-                // console.log(this.result);
-                csv2geojson.csv2geojson(this.result, function (err, data) {
-                    geojsondata = data;
-                });
-            }
-        }
-
-
-
         $("#shili").click(function () {
-            window.open("https://jet-nmemc.github.io/arrow/arrow.csv");
+            window.open("https://jet-nmemc.github.io/GSTA/GSA_of_site_samples.csv");
         });
 
         function csvToObject(csvString) {
