--- a/GSTA.html
+++ b/GSTA.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="keywords" content="GSTA, 沉积物趋势, 粒径趋势分析程序, 粒径趋势分析软件" />
+    <title>GSTA</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="GSTA/demo.css" />
     <script src="https://npmcdn.com/csv2geojson@latest/csv2geojson.js"></script>
@@ -14,7 +15,6 @@
 </head>
 
 <body>
-    <!-- <canvas id="myCanvas" style="float: left; width: 800px; height: 600px; border-width: 1px; z-index: 100;"></canvas> -->
     <div id="map"></div>
     <div style="position: absolute; padding: 10px; background-color: cornsilk;">
         <div><button id="shili" style="width: 100%;">example</button></div>
