--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="location2coord.html" style="top: 85%; left: 30%;">地址转坐标</a>
     </div>
     <div>
-        <a href="TidePredictChina.html" class="b" style="top: 5%; left: 70%;">潮位预报</a>
+        <a href="TidePredictNAO99.html" class="b" style="top: 5%; left: 70%;">潮位预报工具</a>
         <a href="GSTA.html" class="b" style="top: 15%; left: 70%;">粒径趋势分析</a>
     </div>
 </body>
