--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div>
         <a href="Gaussian projection coordinate conversion.html" style="top: 5%; left: 30%;">高斯投影正反算坐标转换</a>
         <a href="coord_transform.html" style="top: 15%; left: 30%;">大地坐标度分秒转换</a>
-        <a href="auto contours.html" style="top: 25%; left: 30%;">自动刻度颜色图例</a>
+        <a href="auto contours/auto contours.html" style="top: 25%; left: 30%;">自动刻度颜色图例</a>
         <a href="webgis contour map origin.html" style="top: 35%; left: 30%;">等值线图在线渲染系统</a>
         <a href="webgis contour map vector.html" style="top: 45%; left: 30%;">等值线图在线矢量系统</a>
         <a href="Openstreet Rigon.html" style="top: 55%; left: 30%;">Open Street 行政区域查询</a>
