--- a/webgis contour map origin.html
+++ b/webgis contour map origin.html
@@ -137,7 +137,7 @@
         src="https://webapi.amap.com/maps?v=1.4.15&key=106280a19d653ff6eaf4d8075e348736&plugin=AMap.DistrictSearch"></script>
     <script src="contourmap/kriging0.js"></script>
 
-    <script src="https://unpkg.com/gcoord/dist/gcoord.js"></script>
+    <script src="contourmap/gcoord.js"></script>
     <script src="contourmap/leaflet.mapCorrection.js"></script>
 
     <script src="contourmap/L.KML.js"></script>
